Added image and styled it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello Git!!</h1>
+
     <form>
       <input type="email" name="email" placeholder="Enter your email" />
       <input
@@ -17,6 +18,10 @@
       />
       <input type="button" value="Submit" />
     </form>
+    <img
+      class="servers"
+      src="https://www.racksolutions.com/news/app/uploads/AdobeStock_90603827-scaled.jpeg"
+    />
     <script src="index.js"></script>
   </body>
 </html>
