--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello Git!!</h1>
+    <h2>Welcome Hosting on Netlify!👏🏼👏🏼🎬</h2>
 
     <form>
       <input type="email" name="email" placeholder="Enter your email" />
